# swisspost-verifier

./: .gitignore  DEVELOPMENT_ISSUES.md  README.md  SIGNATURE_IMPLEMENTATION_NOTES.md  pyproject.toml  requirements.txt
swisspost_independent_verifier/: __init__.py  __main__.py  context.py  crypto.py  dataset.py  electoral_model.py  mixnet.py  plaintexts.py  result.py  schema.py  signatures.py  write_ins.py
tests/: test_crypto_vectors.py  test_electoral_model.py  test_fixture_dataset.py  test_mixnet_vectors.py  test_plaintexts.py  test_signatures.py  test_system_vectors.py  test_write_ins.py
