[project]
name = "swisspost-independent-verifier"
version = "0.1.0"
description = "Independent verifier for Swiss Post e-voting evidence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=6.1",
]

[project.scripts]
swisspost-independent-verifier = "swisspost_independent_verifier.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["swisspost_independent_verifier*"]
